--- a/src/App.css
+++ b/src/App.css
@@ -2,33 +2,84 @@
 
 }
 
-
+html {
+  font-size: 20px;
+}
 @import url('https://fonts.googleapis.com/css2?family=Newsreader:wght@200;300&family=Playfair+Display:wght@400;500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100;0,200;0,300;0,700;1,500&family=Newsreader:wght@200;300&display=swap');
 body {
   font-family: 'Bitter', serif;
-  background: #ede0d4;
+  background: #121417;
+  color: #2dc653;
+  height: 100%;
+  position: relative;
+  text-shadow: 0 0 3px #2dc653;
 }
+
+
+  
+
+@keyframes glitch{
+  2%,64%{
+    transform: translate(0.5px,0) skew(0deg);
+  }
+  
+  62%{
+    transform: translate(0,0) skew(4deg); 
+  }
+}
+
+body:before {
+  animation: example 0.1s linear infinite;
+  height: 100%;
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: linear-gradient(
+      to bottom,
+      rgba(18, 16, 16, 0) 50%,
+      rgba(0, 0, 0, 0.25) 50%
+  );
+  background-size: 100% 2px;
+  z-index: 2;
+  pointer-events: none;
+}
+
+@keyframes example {
+  0%   {opacity: 0.3}
+  
+  50%  {opacity: 0.7}
+  
+}
+
 
 p {
   font-size: 1.2rem;
   font-weight: 600;;
-  color: #343a40;
+  
   margin-left: -0.6rem;;
 }
 
 
 code {
-  color: #495057;
+  color: inherit;
   
 }
 
+a {
+  color: inherit;
+}
 a:hover {
-  color: red;
+  color: green;
 }
 
 h1, h2, h3 {
   margin-left: -0.6rem;
+  animation: glitch 0.2s linear infinite; 
 }
 
 li {
