--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
   font-family: 'Bitter', serif;
   background: #121417;
   color: #2dc653;
-  height: 100%;
+  height: 100vh;
   position: relative;
   
 }
@@ -31,6 +31,7 @@ body {
 .flick {
   text-shadow: 0 0 2px #2dc653;
   position: relative;
+  height: 100%;
 }
 
 .flick:before {
@@ -111,6 +112,7 @@ ul {
   display: flex;
   align-self: center;
   justify-content: flex-start;
+  height: 100%;
 }
 .crtBtn {
   
@@ -157,3 +159,22 @@ ul {
   cursor: pointer;
 }
 
+.frame {
+  background: url("./assets/tv2.png") no-repeat center ;
+  background-size: contain;
+  width: 100vw;
+  height: 100vh;
+  
+  
+  position: absolute;
+  overflow: auto;
+}
+
+.screenWrapper {
+  width: 70vw;
+  margin: 0 auto;
+  position: relative;
+  top: 200px;
+  vertical-align: middle;
+  
+}
