--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@ body {
   text-shadow: 0 0 2px #2dc653;
   position: relative;
   height: 100%;
+  
 }
 
 .flick:before {
@@ -84,7 +85,7 @@ a:hover {
 }
 
 h1, h2, h3 {
-  margin-left: -0.6rem;
+  
   
 }
 
@@ -171,10 +172,25 @@ ul {
 }
 
 .screenWrapper {
-  width: 70vw;
+  width: 65vw;
   margin: 0 auto;
   position: relative;
-  top: 200px;
-  vertical-align: middle;
   
+  vertical-align: middle;
+  height: auto;
+}
+
+.insideFrame {
+  
+  height: 70vh;
+  width: 65vw;;
+  overflow: auto;
+  position:absolute;
+  top: 15vh;
+  left: 18vw;
+  padding-right: 1rem;;
+}
+
+::-webkit-scrollbar {
+  width: 20px;
 }
