--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ html {
 @import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100;0,200;0,300;0,700;1,500&family=Newsreader:wght@200;300&display=swap');
 body {
   font-family: 'Bitter', serif;
-  background: #121417;
+  background: #202020;
   color: #2dc653;
   height: 100vh;
   position: relative;
@@ -38,11 +38,13 @@ body {
 .flick:before {
   animation: example 0.1s linear infinite;
   
-  height: 100%;
+  height: 760px;
+  width: 1000px;
+  margin: 0 auto;
   content: " ";
   display: block;
   position: absolute;
-  top: 0;
+  top: 120px;
   left: 0;
   bottom: 0;
   right: 0;
@@ -117,7 +119,7 @@ ul {
 }
 .crtBtn {
   
-  margin-left: 5rem;
+  margin-left: 0rem;
   margin-top: 2rem;
   background: #2dc653;
   color: black;
@@ -161,34 +163,33 @@ ul {
 }
 
 .frame {
-  background: url("./assets/tv2.png") no-repeat center ;
+  background: url("./assets/tv2.png") no-repeat center center;
   background-size: contain;
-  width: 100vw;
-  height: 100vh;
-  
-  
+  width: 1200px;
+  height: 1000px;
   position: absolute;
   overflow: auto;
+  margin: 0 auto;
+  border-radius: 50px;
 }
 
 .screenWrapper {
   width: 65vw;
   margin: 0 auto;
   position: relative;
-  
   vertical-align: middle;
   height: auto;
 }
 
 .insideFrame {
   
-  height: 70vh;
-  width: 65vw;;
+  height: 680px;
+  width: 910px;
   overflow: auto;
   position:absolute;
-  top: 15vh;
-  left: 18vw;
-  padding-right: 1rem;;
+  top: 170px;
+  left: 150px;
+  
 }
 
 ::-webkit-scrollbar {
