--- a/src/App.css
+++ b/src/App.css
@@ -20,14 +20,77 @@ body {
   height: 36px;
   width: 36px;
   z-index: 2;
-  position: absolute;
+  position: relative;
   left: 1235px ;
-  top: 665.5px;
+  top: 191px;
   border-radius: 50%;
-  border: 2px solid red;
+  border: 2px solid #2dc653;
+  opacity: 0.4;
+  cursor: pointer;
+}
+.btn1 span {
+  font-size: 1rem;
+  position: relative;
+  top: 5px;
+  left: 4.5px;
 }
 
+.btn1:hover {
   
+  opacity: 0.8;
+}
+
+.btn2 {
+  height: 36px;
+  width: 36px;
+  z-index: 3;
+  position: relative;
+  left: 1323px ;
+  top: 151px;
+  border-radius: 50%;
+  border: 2px solid #ffba08;
+  opacity: 0.4;
+  cursor: pointer;
+}
+.btn2 span {
+  color: #ffba08;
+  font-size: 1rem;
+  position: relative;
+  top: 3px;
+  left: 12px;
+}
+
+
+
+.btn2:hover {
+  
+  opacity: 0.8;
+}
+  
+.btn3 {
+  height: 36px;
+  width: 36px;
+  z-index: 3;
+  position: relative;
+  left: 1394px ;
+  top: 98px;
+  border-radius: 50%;
+  border: 2px solid red;
+  opacity: 0.6;
+  cursor: pointer;
+}
+.btn3 span {
+  color: red;
+  font-size: 1rem;
+  position: relative;
+  top: 6px;
+  left: 10px;
+}
+
+.btn3:hover {
+  
+  opacity: 0.8;
+}
 
 @keyframes glitch{
   2%,64%{
@@ -102,10 +165,11 @@ code {
 }
 
 a {
+  text-transform: uppercase;
   color: inherit;
 }
 a:hover {
-  color: green;
+  text-transform: uppercase;
 }
 
 h1, h2, h3 {
@@ -193,30 +257,17 @@ ul {
 }
 
 .frame {
-  background: url("./assets/tv6.png") no-repeat center center;
+  background: url("./assets/tv7.png") no-repeat center center;
   background-size: contain;
   width: 1550px;
   height: 1550px;
   position: absolute;
   overflow: auto;
   margin: 0 auto;
-  border-radius: 50px;
+  
 }
 
-.frame::after {
-  content: "";
-  height: 36px;
-  width: 36px;
-  z-index: 3;
-  position: absolute;
-  left: 1235px ;
-  top: 665.5px;
-  border-radius: 50%;
-  border: 2px solid red;
-}
-.frame::after:hover {
-  border: 2px solid green;
-}
+
 
 .screenWrapper {
   width: 780px;
@@ -224,6 +275,7 @@ ul {
   position: relative;
   vertical-align: middle;
   height: auto;
+  
 }
 
 .insideFrame {
