--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 
 html {
   font-size: 20px;
+  scroll-behavior: smooth;
 }
 @import url('https://fonts.googleapis.com/css2?family=Newsreader:wght@200;300&family=Playfair+Display:wght@400;500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100;0,200;0,300;0,700;1,500&family=Newsreader:wght@200;300&display=swap');
@@ -170,6 +171,7 @@ a {
 }
 a:hover {
   text-transform: uppercase;
+
 }
 
 h1, h2, h3 {
@@ -187,6 +189,8 @@ li {
   font-weight: 600;
 }
 
+
+
 .subLinks {
   font-size: 0.9rem;
   font-weight: 300;
@@ -195,6 +199,10 @@ li {
 ul {
   list-style: none;
   margin-left: -2rem;;
+}
+
+ul a:hover {
+  color:green;
 }
 
 .tab {
