--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,18 @@
 * {
-
 }
 
 html {
   font-size: 20px;
   scroll-behavior: smooth;
 }
-@import url('https://fonts.googleapis.com/css2?family=Newsreader:wght@200;300&family=Playfair+Display:wght@400;500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100;0,200;0,300;0,700;1,500&family=Newsreader:wght@200;300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Newsreader:wght@200;300&family=Playfair+Display:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100;0,200;0,300;0,700;1,500&family=Newsreader:wght@200;300&display=swap");
 body {
-  font-family: 'Bitter', serif;
+  font-family: "Bitter", serif;
   background: #202020;
   color: #2dc653;
   height: 100vh;
   position: relative;
-  
 }
 
 .btn1 {
@@ -22,7 +20,7 @@ body {
   width: 36px;
   z-index: 2;
   position: relative;
-  left: 1235px ;
+  left: 480px;
   top: 191px;
   border-radius: 50%;
   border: 2px solid #2dc653;
@@ -37,7 +35,6 @@ body {
 }
 
 .btn1:hover {
-  
   opacity: 0.8;
 }
 
@@ -46,7 +43,7 @@ body {
   width: 36px;
   z-index: 3;
   position: relative;
-  left: 1323px ;
+  left: 568px;
   top: 151px;
   border-radius: 50%;
   border: 2px solid #ffba08;
@@ -61,19 +58,16 @@ body {
   left: 12px;
 }
 
-
-
 .btn2:hover {
-  
   opacity: 0.8;
 }
-  
+
 .btn3 {
   height: 36px;
   width: 36px;
   z-index: 3;
   position: relative;
-  left: 1394px ;
+  left: 639px;
   top: 98px;
   border-radius: 50%;
   border: 2px solid red;
@@ -89,29 +83,28 @@ body {
 }
 
 .btn3:hover {
-  
   opacity: 0.8;
 }
 
-@keyframes glitch{
-  2%,64%{
-    transform: translate(0.5px,0) skew(0deg);
+@keyframes glitch {
+  2%,
+  64% {
+    transform: translate(0.5px, 0) skew(0deg);
   }
-  
-  62%{
-    transform: translate(0,0) skew(4deg); 
+
+  62% {
+    transform: translate(0, 0) skew(4deg);
   }
 }
 .flick {
   text-shadow: 0 0 2px #2dc653;
   position: relative;
   height: 100%;
-  
 }
 
 .flick:before {
   animation: example 0.1s linear infinite;
-  
+
   height: 650px;
   width: 810px;
   margin: 0 auto;
@@ -123,9 +116,9 @@ body {
   bottom: 0;
   right: 0;
   background: linear-gradient(
-      to bottom,
-      rgba(18, 16, 16, 0) 50%,
-      rgba(0, 0, 0, 0.25) 50%
+    to bottom,
+    rgba(18, 16, 16, 0) 50%,
+    rgba(0, 0, 0, 0.25) 50%
   );
   background-size: 100% 2px;
   z-index: 2;
@@ -133,10 +126,13 @@ body {
 }
 
 @keyframes example {
-  0%   {opacity: 0.3}
-  
-  50%  {opacity: 0.7}
-  
+  0% {
+    opacity: 0.3;
+  }
+
+  50% {
+    opacity: 0.7;
+  }
 }
 
 .crs {
@@ -144,7 +140,7 @@ body {
 }
 
 @keyframes crs {
-  25%{
+  25% {
     opacity: 1;
   }
   75% {
@@ -154,15 +150,11 @@ body {
 
 p {
   font-size: 1.2rem;
-  font-weight: 600;;
-  
-  
+  font-weight: 600;
 }
-
 
 code {
   color: inherit;
-  
 }
 
 a {
@@ -171,16 +163,16 @@ a {
 }
 a:hover {
   text-transform: uppercase;
-
 }
 
-h1, h2, h3 {
-  
-  
+h1,
+h2,
+h3 {
 }
 
-.top {
+#top {
   margin-bottom: 0.2rem;
+  margin-top: 0rem;
 }
 
 li {
@@ -189,8 +181,6 @@ li {
   font-weight: 600;
 }
 
-
-
 .subLinks {
   font-size: 0.9rem;
   font-weight: 300;
@@ -198,11 +188,11 @@ li {
 
 ul {
   list-style: none;
-  margin-left: -2rem;;
+  margin-left: -2rem;
 }
 
 ul a:hover {
-  color:green;
+  color: green;
 }
 
 .tab {
@@ -214,24 +204,21 @@ ul a:hover {
   align-self: center;
   justify-content: flex-start;
   height: 100%;
-  
 }
 .crtBtn {
-  
   margin-left: 0rem;
   margin-top: 0rem;
   background: #2dc653;
   color: black;
   border: none;
-  
+
   top: 465px;
   left: 1265px;
   z-index: 1;
   font-size: 1rem;
   border-radius: 5px;
-  font-family: 'Bitter', serif;
+  font-family: "Bitter", serif;
   font-weight: 600;
-  
 }
 
 .invert {
@@ -250,7 +237,6 @@ ul a:hover {
 .hide {
   visibility: hidden;
   height: 0rem;
-
 }
 
 .showBtn {
@@ -264,6 +250,14 @@ ul a:hover {
   cursor: pointer;
 }
 
+.screenWrapper {
+  width: 780px;
+  margin: 0 auto;
+  position: relative;
+  vertical-align: middle;
+  height: auto;
+  margin-top: 0rem;
+}
 .frame {
   background: url("./assets/tv7.png") no-repeat center center;
   background-size: contain;
@@ -272,31 +266,152 @@ ul a:hover {
   position: absolute;
   overflow: auto;
   margin: 0 auto;
-  
 }
-
-
-
-.screenWrapper {
-  width: 780px;
-  margin: 0 auto;
-  position: relative;
-  vertical-align: middle;
-  height: auto;
-  
-}
-
 .insideFrame {
-  
   height: 580px;
   width: 800px;
   overflow: auto;
-  position:absolute;
+  position: absolute;
   top: 550px;
   left: 250px;
-  
 }
 
 ::-webkit-scrollbar {
   width: 20px;
+}
+
+@media (max-width: 1200px) {
+  .frame {
+    width: 1150px;
+    height: 1150px;
+  }
+  .insideFrame {
+    height: 440px;
+    width: 610px;
+    top: 410px;
+    left: 180px;
+  }
+
+  .screenWrapper {
+    width: 580px;
+  }
+
+  .btn1 {
+    height: 27px;
+    width: 27px;
+    left: 357px;
+    top: 143px;
+  }
+  .btn1 span {
+    font-size: 1rem;
+    top: 3px;
+    left: 3px;
+  }
+
+  .btn1:hover {
+    opacity: 0.8;
+  }
+
+  .btn2 {
+    height: 27px;
+    width: 27px;
+    left: 422px;
+    top: 112px;
+  }
+  .btn2 span {
+    font-size: 1rem;
+    top: 2px;
+    left: 9px;
+  }
+
+  .btn3 {
+    height: 27px;
+    width: 27px;
+    left: 474px;
+    top: 72px;
+  }
+
+  .btn3 span {
+    font-size: 1rem;
+    top: 4px;
+    left: 8px;
+  }
+  html {
+    font-size: 16px;
+  }
+
+  .flick:before {
+    height: 472px;
+    width: 620px;
+    top: 387px;
+    left: -210px;
+  }
+}
+
+@media (max-width: 768px) {
+  .frame {
+    width: 750px;
+    height: 750px;
+  }
+  .insideFrame {
+    height: 280px;
+    width: 610px;
+    top: 270px;
+    left: 12px;
+  }
+
+  .screenWrapper {
+    width: 380px;
+  }
+
+  .btn1 {
+    height: 17px;
+    width: 17px;
+    left: 232.5px;
+    top: 94px;
+  }
+  .btn1 span {
+    font-size: 1rem;
+    top: 1px;
+    left: 1px;
+  }
+
+  .btn1:hover {
+    opacity: 0.8;
+  }
+
+  .btn2 {
+    height: 17px;
+    width: 17px;
+    left: 274.5px;
+    top: 73.5px;
+  }
+  .btn2 span {
+    font-size: 1rem;
+    top: 0px;
+    left: 5px;
+  }
+
+  .btn3 {
+    height: 17px;
+    width: 17px;
+    left: 309px;
+    top: 46px;
+  }
+
+  .btn3 span {
+    font-size: 1rem;
+    top: 1.5px;
+    left: 4px;
+  }
+  html {
+    font-size: 12px;
+  }
+
+  .flick:before {
+    height: 305px;
+    width: 390px;
+    top: 257px;
+    left: -130px;
+  }
 }
